fix: tentativa de corrigir erro requisito 11 no avaliador github - adiciona z-index

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -12,6 +12,7 @@
   margin-block: 10px;
   padding: 5px;
   width: 100%;
+  z-index: 2;
 }
 
 .header > div > h3 {
@@ -20,5 +21,5 @@
   position: absolute;
   right: 0;
   text-align: center;
-  width: 60%;
+  width: 75%;
 }
